--- a/css+div/tailwind-redo/responsive-menu/src/app/globals.css
+++ b/css+div/tailwind-redo/responsive-menu/src/app/globals.css
@@ -79,6 +79,6 @@
 
 @layer components {
   .card {
-    @apply rounded-xl overflow-hidden shadow-md hover:shadow-2xl cursor-pointer bg-white border-[1px] border-zinc-200 relative
+    @apply border-[1px] border-zinc-100 rounded-xl overflow-hidden bg-white shadow-md hover:shadow-2xl cursor-pointer relative
   }
 }
