How to implement a slider with 2 thumbs

--- a/nextjs/next-toolkits/src/app/range/multiRangeSlider.css
+++ b/nextjs/next-toolkits/src/app/range/multiRangeSlider.css
@@ -87,7 +87,7 @@
     width: 18px;
     margin-top: 4px;
     pointer-events: all;
-    position: relative;
+    /* position: relative; */
   }
   
   /* For Firefox browsers */
