--- a/nextjs/next-toolkits/src/app/globals.css
+++ b/nextjs/next-toolkits/src/app/globals.css
@@ -76,3 +76,46 @@
     @apply bg-background text-foreground;
   }
 }
+
+.thumb,
+.thumb::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  
+}
+.thumb {
+  height: 0px;
+  pointer-events: none;
+  position: absolute;
+  outline: none;
+}
+
+.thumb::-webkit-slider-thumb {
+  width: 40px;
+  height: 40px;
+  border: none;
+  background: #4CAF50;
+  border-radius: 50%;
+  cursor: pointer;
+  pointer-events: all;
+}
+.thumb::-moz-range-thumb {
+  width: 40px;
+  height: 40px;
+  border: none;
+  background: #4CAF50;
+  border-radius: 50%;
+  cursor: pointer;
+  pointer-events: all;
+}
+
+
+.thumb--zindex-3 {
+  z-index: 3;
+}
+
+.thumb--zindex-4 {
+  z-index: 4;
+}
+
+
