--- a/css+div/tailwind-redo/responsive-menu/src/app/globals.css
+++ b/css+div/tailwind-redo/responsive-menu/src/app/globals.css
@@ -79,6 +79,6 @@
 
 @layer components {
   .card {
-    @apply rounded-md shadow-md overflow-hidden hover:shadow-2xl relative cursor-pointer
+    @apply rounded-md overflow-hidden bg-white shadow-md hover:shadow-lg relative cursor-pointer
   }
 }
